# http-server-rust

./: Cargo.toml  README.md  \
src/: config.rs  constants.rs  dir.rs  errors.rs  file.rs  frame.rs  handlers.rs  http.rs  lib.rs  main.rs  request.rs  response.rs  router.rs  routes.rs  server.rs  thread_pool.rs  traits.rs  utils.rs
src/_deprecated/: deprecated_handlers.rs  deprecated_response.rs
src/_deprecated/deprecated_utils/: functions.rs
src/common/: constants.rs  mod.rs
src/config/: mod.rs
src/handlers/: deprecated_handlers.rs  echo.rs  empty.rs  files.rs  mod.rs  user_agent.rs
src/http/: deprecated_response.rs  mod.rs  request.rs  response.rs
src/router/: deprecated_request_router.rs  mod.rs  request_router.rs
src/server/: app_server.rs  deprecated_server.rs  mod.rs  thread_pool.rs
src/utils/: functions.rs  mod.rs
